kubernetes/atlassian/runMysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atlassian
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: atlassian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      name: mysql
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-data
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc

---
kind: Service
apiVersion: v1
metadata:
  name:  mysql
  namespace: atlassian
spec:
  selector:
    app:  mysql
  type:  ClusterIP
  clusterIP: None
  ports:
  - name: mysqlPort
    port: 3306
    targetPort:  3306
