kubernetes/atlassian/runConfluence.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confluence
  namespace: atlassian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confluence
  template:
    metadata:
      name: confluence
      labels:
        app: confluence
    spec:
      containers:
      - name: confluence
        image: dyb0204/confluence
        imagePullPolicy: Always
        ports:
        - containerPort: 8090
        volumeMounts:
        - mountPath: /var/atlassian/application-data/confluence
          name: confluence-data
        lifecycle: 
          preStop:
              exec:
                command:
                - /bin/sh
                - -c 
                - ps aux|grep java|grep -v grep|awk {'print $2'}|xargs kill -9
      volumes:
      - name: confluence-data
        persistentVolumeClaim:
          claimName: confluence-data
---
kind: Service
apiVersion: v1
metadata:
  name:  confluence
  namespace: atlassian
spec:
  selector:
    app:  confluence
  type:  ClusterIP
  ports:
  - name: confluence
    port: 8090
    targetPort:  8090
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: confluence-ingress
  namespace: atlassian
spec:
  rules:
  - host: confluence.devops.com
    http:
       paths:
       - backend:
          serviceName: confluence
          servicePort: 8090
